Fixes header border radius that gets overflown by its content.

--- a/src/scss/components/c-sf-block.scss
+++ b/src/scss/components/c-sf-block.scss
@@ -29,6 +29,7 @@
         user-select: none;
         transition: background-color $hover-transition-duration ease-in-out;
         cursor: default;
+        border-top-left-radius: $border-radius;
 
         &--collapsible {
             cursor: pointer;
@@ -125,6 +126,7 @@
             position: relative;
             flex: 0 0 auto;
             padding: $header-padding-vertical $header-padding-horizontal;
+            border-bottom-left-radius: $border-radius;
 
             .c-sf-block__header__title {
                 position: sticky;
@@ -156,6 +158,7 @@
 
     &.COLLAPSIBLE {
         > .c-sf-block__header {
+            border-top-right-radius: $border-radius;
             .c-sf-block__header__title {
                 white-space: nowrap;
                 text-overflow: ellipsis;
